crates/crochet_parser/src/snapshots/crochet_tree_sitter_parser__tests__numbers-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"1.23;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..5,
                expr: Lit(
                    Num(
                        Num {
                            span: 0..4,
                            value: "1.23",
                        },
                    ),
                ),
            },
        ],
    },
)
